fixes horizontal scroll

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
 /* Main navbar */
 .navbar-wagon {
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  width: 100%;
   background: white;
   transition: all 0.3s ease;
   height: 70px;
@@ -12,6 +11,18 @@
   background-color: transparent;
   z-index: 9999;
 }
+@media(max-width: 768px) {
+  .navbar-wagon {
+    width: 90%;
+  }
+}
+
+@media(min-width: 768px) {
+  .navbar-wagon {
+    width: 100%;
+  }
+}
+
 
 .container {
   position: relative;
@@ -21,7 +32,7 @@
   left: 0;
   right: 0;
   top: 0;
-      z-index: 9999;
+  z-index: 9999;
 
 }
 
@@ -56,10 +67,10 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-     color: white;
-    font-size: 16px;
-    font-weight: 500;
-    text-shadow: 2px 2px 4px rgba(1,1,1,0.3);
+ color: white;
+ font-size: 16px;
+ font-weight: 500;
+ text-shadow: 2px 2px 4px rgba(1,1,1,0.3);
 }
 .navbar-wagon-link:hover {
   color: #da552f;
